fix: add quotes to command line args

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,7 @@ jobs:
         set -x
         previousRelease=$(gh release view --json tagName --jq .tagName)
         echo "Previous release: ${previousRelease}"
-        log=$(git log --pretty=format:%25s --invert-grep  --grep ^build  ${previousRelease}..${{ github.sha }})
+        log=$(git log '--pretty=format:%s' --invert-grep  --grep ^build  ${previousRelease}..${{ github.sha }})
         log="${log//'%'/'%25'}"                               # Multiline escape sequences for %
         log="${log//$'\n'/'%0A'}"                             # Multiline escape sequences for '\n'
         log="${log//$'\r'/'%0D'}"                             # Multiline escape sequences for '\r'
