--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,8 @@ jobs:
       contents: write
     steps:
     - uses: actions/checkout@v6
+      with:
+        fetch-tags: true
     - name: Extract and check package version
       id: get-package
       run: |
