--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,9 @@ jobs:
       contents: write
     steps:
     - uses: actions/checkout@v6
+      with:
+        fetch-depth: 0
+        fetch-tags: true
     - name: Extract and check package version
       id: get-package
       run: |
@@ -38,9 +41,8 @@ jobs:
         set -x
         previousRelease=$(gh release view --json tagName --jq .tagName)
         echo "Previous release: ${previousRelease}"
-        git fetch origin refs/tags/${previousRelease}
         git tag
-        log=$(git log '--pretty=format:%s' --invert-grep  --grep ^build  refs/tags/${previousRelease}..${{ github.sha }})
+        log=$(git log '--pretty=format:%s' --invert-grep  --grep ^build  ${previousRelease}..${{ github.sha }})
         log="${log//'%'/'%25'}"                               # Multiline escape sequences for %
         log="${log//$'\n'/'%0A'}"                             # Multiline escape sequences for '\n'
         log="${log//$'\r'/'%0D'}"                             # Multiline escape sequences for '\r'
