--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,7 +42,7 @@ jobs:
         previousRelease=$(gh release view --json tagName --jq .tagName)
         echo "Previous release: ${previousRelease}"
         git tag
-        log=$(git log '--pretty=format:%s' --invert-grep  --grep ^build  ${previousRelease}..${{ github.sha }})
+        log=$(git log '--pretty=format:- %s' --invert-grep  --grep ^build  ${previousRelease}..${{ github.sha }})
         log="${log//'%'/'%25'}"                               # Multiline escape sequences for %
         log="${log//$'\n'/'%0A'}"                             # Multiline escape sequences for '\n'
         log="${log//$'\r'/'%0D'}"                             # Multiline escape sequences for '\r'
@@ -59,5 +59,5 @@ jobs:
         overwrite: true
         body: |
           **Changelog**
-          
+
           ${{ steps.get-log.outputs.log }}
